# Planning_Medecin

./: README.md  pyproject.toml
planning_medecin/: __init__.py  __main__.py  app.py  demonstration.json  lib_hp.py
tests/__pycache__/: test_hp.py
